// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alphabetize option snapshot 1`] = `
<div
  className="css-3plaoc-container react-select"
  onKeyDown={[Function]}
>
  <div
    className="css-1f25rmc-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className="css-1hwfws3"
    >
      <div
        className="css-ugsmvz-placeholder"
      >
        Select...
      </div>
      <input
        className="css-gj7qu5-dummyInput"
        disabled={false}
        id="react-select-3-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        tabIndex="0"
        value=""
      />
    </div>
    <div
      className="css-1wy0on6"
    >
      <div
        aria-hidden="true"
        className="css-fxmmp-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden="true"
          className="css-19bqh2r"
          focusable="false"
          height={20}
          viewBox="0 0 20 20"
          width={20}
        >
          <path
            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="css-1a1oeja-menu"
    onMouseDown={[Function]}
    onMouseMove={[Function]}
  >
    <div
      className="css-1x0y3y4"
    >
      <div
        className="css-5hihnn-option"
        id="react-select-3-option-0"
        onClick={[Function]}
        onMouseMove={[Function]}
        onMouseOver={[Function]}
        tabIndex={-1}
      >
        A
      </div>
      <div
        className="css-5hihnn-option"
        id="react-select-3-option-1"
        onClick={[Function]}
        onMouseMove={[Function]}
        onMouseOver={[Function]}
        tabIndex={-1}
      >
        C
      </div>
      <div
        className="css-5hihnn-option"
        id="react-select-3-option-2"
        onClick={[Function]}
        onMouseMove={[Function]}
        onMouseOver={[Function]}
        tabIndex={-1}
      >
        E
      </div>
      <div
        className="css-5hihnn-option"
        id="react-select-3-option-3"
        onClick={[Function]}
        onMouseMove={[Function]}
        onMouseOver={[Function]}
        tabIndex={-1}
      >
        Z
      </div>
    </div>
  </div>
</div>
`;

exports[`basic snapshot 1`] = `
<div
  className="css-3plaoc-container react-select"
  onKeyDown={[Function]}
>
  <div
    className="css-1f25rmc-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className="css-1hwfws3"
    >
      <div
        className="css-ugsmvz-placeholder"
      >
        Select...
      </div>
      <input
        className="css-gj7qu5-dummyInput"
        disabled={false}
        id="react-select-2-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        tabIndex="0"
        value=""
      />
    </div>
    <div
      className="css-1wy0on6"
    >
      <div
        aria-hidden="true"
        className="css-fxmmp-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden="true"
          className="css-19bqh2r"
          focusable="false"
          height={20}
          viewBox="0 0 20 20"
          width={20}
        >
          <path
            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="css-1a1oeja-menu"
    onMouseDown={[Function]}
    onMouseMove={[Function]}
  >
    <div
      className="css-1x0y3y4"
    >
      <div
        className="css-5hihnn-option"
        id="react-select-2-option-0"
        onClick={[Function]}
        onMouseMove={[Function]}
        onMouseOver={[Function]}
        tabIndex={-1}
      >
        A
      </div>
      <div
        className="css-5hihnn-option"
        id="react-select-2-option-1"
        onClick={[Function]}
        onMouseMove={[Function]}
        onMouseOver={[Function]}
        tabIndex={-1}
      >
        B
      </div>
      <div
        className="css-5hihnn-option"
        id="react-select-2-option-2"
        onClick={[Function]}
        onMouseMove={[Function]}
        onMouseOver={[Function]}
        tabIndex={-1}
      >
        C
      </div>
    </div>
  </div>
</div>
`;
